# barcelona-housing-demographics-analyzer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .roadmap_dates.env  CHANGELOG.md  COMMIT_MESSAGE_MODULO2.md  CONTRIBUTING.md  DESIGN.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  code.html  docker-compose.yml  etl_log.txt  etl_log_2.txt  etl_log_3.txt  etl_log_final.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  setup_project.sh  sync_issues.sh  test_db_debug.py  untitled.codediagram
.cursor/rules/: 000-project-standards.mdc  100-etl-processing.mdc  200-database-schema.mdc  300-visualization.mdc
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  epic.yml  feature_request.md  feature_request.yml  research_task.md  spike-design.md  spike.md  sub-issue.md  technical_spec.md
.github/config/: labels.yml  milestones.yml
.github/scripts/: README.md  README_SETUP.md  ai_pm.py  cleanup_duplicate_issues.py  create_issues_from_roadmap.py  create_sprint_issues.py  project_automation.py  project_automation.py.bak  project_automation_v2.py  project_metrics.py  quick_metrics.sh  requirements.txt  setup_project_complete.py  setup_project_fields.py
.github/workflows/: ai_audit.yml  auto-label-pr.yml  auto-merge-dependencies.yml  auto_assign.yml  ci-enhanced.yml  ci.yml  daily-metrics.yml  daily_ai_audit.yml  dashboard-demo.yml  data-quality-monitor.yml  data-quality.yml  data_audit.yml  dependabot-comments.yml  deploy-staging.yml  dqc-automation.yml  etl-refresh.yml  etl-smoke.yml  issue-quality-check.yml  kpi-update.yml  project-automation.yml  project-sync.yml  roadmap-sync.yml  sync_labels.yml  validate-issue-drafts.yml
.streamlit/: config.toml
.venv-spike/: pyvenv.cfg
api/: README.md  database.py  main.py  models.py
api/routers/: __init__.py  barrios.py  demographics.py  housing.py
dashboard/: .env.example  README.md  vite.config.ts
dashboard/src/: App.tsx  index.css
data/reference/: README_INE_MAPPING.md  barrio_ine_mapping.json
docs/: 01_VISION_AND_OBJECTIVES.md  ADVANCED_DATASETS_INTEGRATION_REPORT.md  API_usage.md  ARCHITECTURE_IMPLEMENTATION_PLAN.md  AUDITORIA_COMPLETA_PROYECTO.md  AUDIT_RECIENTE_RESUMEN.md  BEST_PRACTICES_GITHUB_ISSUES.md  BUSQUEDA_MANUAL_DATASETS.md  CHANGELOG.md  CODE_AUDIT_ISSUES.md  COMPLIANCE_CHECKLIST.md  CORRECCIONES_EXTRACCION.md  CUSTOM_FIELDS_SUMMARY.md  DATABASE_SCHEMA.md  DATA_EXPANSION_ROADMAP.md  DATA_STRUCTURE.md  DATOS_FALTANTES.md  DATOS_FALTANTES_ACTUALIZADO.md  DEBUGGING_DATASETS.md  DEVELOPMENT_ENVIRONMENT.md  EPIC_FIELD_CORRECTION_SUMMARY.md  EPIC_FIELD_USAGE.md  EPIC_FIELD_VALUES.md  EXTRACTION_IMPROVEMENTS.md  FASE1_COMPLETE.md  FASE1_COMPLETION_CHECKLIST.md  FASE1_CUSTOM_FIELDS_OPTIONS.md  FASE1_CUSTOM_FIELDS_QUICK_COPY.md  FASE1_CUSTOM_FIELDS_REFERENCE.md  FASE1_EXECUTION_SUMMARY.md  FASE1_NEXT_STEPS.md  FASE1_PENDING_CUSTOM_FIELDS.md  FASE1_PROJECT_SETUP.md  FASE1_PROJECT_TROUBLESHOOTING.md  FASE1_READY_TO_EXECUTE.md  FASE1_SCRIPT_SUMMARY.md  FASE1_SETUP_INSTRUCTIONS.md  FEATURE_IDEAS.md  FUENTES_PENDIENTES.md  GITHUB_DOCUMENTATION_STATUS.md  (+77 more)
docs/analysis/: MARKET_SEGMENTATION_V0_RESULTS.md
docs/api/: README.md
docs/architecture/: ARCHITECTURE_V2_EXPANSION.md  ARQUITECTURA_DATOS_VARIABLES.md  DATABASE_SCHEMA_V2.md  DATA_FLOW.md  DEPENDENCIES.md  ETL_PIPELINE.md  README.md  arquitectura_visual.txt  tech_stack.md
docs/data_sources/: COMERCIO.md  EDUCACION.md  GENERALITAT.md  ICGC.md  INSIDE_AIRBNB.md  MOVILIDAD.md  PHASE2_DATA_DISCOVERY.md  RUIDO.md  SERVICIOS_SALUD.md  VIVIENDA_PUBLICA.md  ZONAS_VERDES.md
docs/database/: SCHEMA_V2_EDUCATION_ENVIRONMENTAL.sql  SCHEMA_V2_FOUNDATION.sql
docs/features/: README.md  data-quality-dashboard.md  feature-02-calculator.md
notebooks/: 00_stakeholder_demo.ipynb  01-eda-initial.ipynb  02-case-study-barrios.ipynb  02_EDA_gracia_merged.html  02_EDA_gracia_merged.ipynb  03-eda-demografia.ipynb  04-eda-precios.ipynb  market_cockpit_analytics.ipynb  spike_gracia_portaldades_alquiler.ipynb  test_idescat.py
project-docs/: index.md  timeline.md  user-structure.md
scripts/: SPRINT_AUTOMATION_README.md  add_all_issues_to_project.sh  add_all_issues_to_project_v2.sh  add_fase1_issues_to_project.sh  audit_data_availability.py  build_idealista_location_ids.py  bulk_add_sprint_dates.py  calculate_regulacion_data.py  check_bcn_urls.py  check_data_availability.py  check_idescat_structure.py  configure_all_project_fields.sh  configure_project_fields.sh  create_analytical_views.py  create_architecture_milestones.sh  create_audit_issues.sh  create_dim_tiempo.py  create_epic_placeholders.sh  create_fase1_epic.sh  create_fase1_issues.sh  create_fase1_subissues.sh  create_fase_1_issues.sh  create_github_structure.sh  create_github_structure_with_token.sh  create_initial_issues.py  create_issues_from_drafts.py  create_milestones.sh  create_minimal_barrios.py  create_roadmap_epics_with_dates.sh  create_roadmap_issues.sh  create_sample_icgc_data.py  create_spike_issues.sh  create_user_stories_v2_0.sh  create_variable_extraction_issues.sh  daily_ai_audit.py  data_audit.py  debug_datasets.py  enrich_demographics.py  export_socioeconomics_renta.py  extract_advanced_attributes.py  (+82 more)
spike-data-validation/: .env.example  README.md  SETUP.md  requirements.txt
spikes/: README.md
src/: __init__.py  analysis.py  app.py  data_extraction.py  data_processing.py  database_setup.py  database_views.py
tests/: conftest.py  test_analysis.py  test_app_main.py  test_bcn_income.py  test_cleaners.py  test_data_extraction.py  test_data_quality_metrics.py  test_database_setup.py  test_database_views.py  test_dataset_integration.py  test_deduplication.py  test_demographics.py  test_dim_barrios_migration.py  test_dim_tiempo.py  test_dimensions.py  test_extraction_orchestrator.py  test_fk_validation.py  test_idescat.py  test_parse_household_size.py  test_pipeline.py  test_project_automation_v2.py
wireframes/: data_flow_diagram.mermaid  schema_erd.mermaid
(+330 files in other folders)
