# ==============================================================================
# Barcelona Housing Demographics Analyzer - Project Configuration
# ==============================================================================
# Configuración centralizada para herramientas de desarrollo:
# - Ruff (linting + formatting)
# - Mypy (type checking)
# - Black (formatting backup)
# - Isort (import sorting)
# - Pytest (testing)
# ==============================================================================

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barcelona-housing-analyzer"
version = "0.1.0"
description = "Plataforma de análisis de datos demográficos y vivienda para Barcelona"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Adrian Iraegui", email = "prototyp33@users.noreply.github.com"}
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Database",
]
keywords = ["barcelona", "housing", "demographics", "analysis", "etl"]

[project.urls]
Homepage = "https://github.com/prototyp33/barcelona-housing-demographics-analyzer"
Documentation = "https://github.com/prototyp33/barcelona-housing-demographics-analyzer/tree/main/docs"
Repository = "https://github.com/prototyp33/barcelona-housing-demographics-analyzer.git"
Changelog = "https://github.com/prototyp33/barcelona-housing-demographics-analyzer/blob/main/CHANGELOG.md"

# ==============================================================================
# Ruff Configuration (Linting + Formatting)
# ==============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "env",
    "__pycache__",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
    "*.egg-info",
    "notebooks",  # Notebooks tienen su propio formato
    "data",       # Archivos de datos
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "D",    # pydocstyle (docstrings)
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module (demasiado estricto)
    "D104",   # Missing docstring in public package
    "D203",   # One blank line before class (conflicta con D211)
    "D213",   # Multi-line summary second line (conflicta con D212)
    "S101",   # Use of assert (necesario en tests)
    "T201",   # Print found (permitido en scripts CLI)
    "E501",   # Line too long (ruff format lo maneja)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"]  # Permitir assert y relajar docstrings en tests
"scripts/*" = ["T201", "D"]  # Permitir print en scripts CLI
"notebooks/*" = ["E", "F", "D", "T201"]  # Relajar reglas en notebooks

[tool.ruff.lint.isort]
known-first-party = ["src"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Estilo Google para docstrings

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ==============================================================================
# Mypy Configuration (Type Checking)
# ==============================================================================
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing, no forzar todo
ignore_missing_imports = true  # Muchas librerías no tienen stubs
exclude = [
    "venv",
    "env",
    "build",
    "dist",
    "notebooks",
    "tests",
]

[[tool.mypy.overrides]]
module = [
    "pandas.*",
    "geopandas.*",
    "streamlit.*",
    "plotly.*",
    "sklearn.*",
]
ignore_missing_imports = true

# ==============================================================================
# Black Configuration (Backup formatter)
# ==============================================================================
[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | venv
    | env
    | build
    | dist
    | notebooks
)/
'''

# ==============================================================================
# Isort Configuration (Import Sorting)
# ==============================================================================
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["src"]
skip = [".venv", "venv", "env", "build", "dist"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

# ==============================================================================
# Pytest Configuration
# ==============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
    "network: marks tests requiring network access",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ==============================================================================
# Coverage Configuration
# ==============================================================================
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/notebooks/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
fail_under = 25  # Refleja estado actual (~23%), subir gradualmente en siguientes sprints

